[fix] Fix appendix configuration

--- a/appendix.tex
+++ b/appendix.tex
@@ -2,9 +2,8 @@
 
 \begin{document}
 
-\appendix
+\input{settings/labels-in-main.tex}
 This is the appendix.
-
-\input{appendices/label-settings.tex}
+\input{appendices/appendix-full-contents.tex}
 
 \end{document}
