--- a/submission.tex
+++ b/submission.tex
@@ -15,7 +15,7 @@
 \bibliographystyle{splncs04}
 \bibliography{ref}
 
-% If we separate appendix, we need it.
-\input{settings/labels-in-appendix.tex}
+% Automatically include or exclude the appendix information based on paper-status.tex
+\input{settings/appendix-information.tex}
 
 \end{document}
