[feat] Add argmin/argmax

--- a/settings/author-info.tex
+++ b/settings/author-info.tex
@@ -1,8 +1,20 @@
+\ifunderreview
+
+\lhead[The Subject name / Anonymous]{The subject name / Anonymous}
+
+\title{\vspace{-15mm} The Subject name}
+\author{Anonymous}
+\date{\today}
+
+\else
+
 \lhead[The Subject name / Shuhei Watanabe]{The subject name / Shuhei Watanabe}
 
 \title{\vspace{-15mm} The Subject name}
 \author{Shuhei Watanabe}
 \date{\today}
+
+\fi
 
 \maketitle
 \thispagestyle{fancy}
