--- a/settings/user-commands.tex
+++ b/settings/user-commands.tex
@@ -7,3 +7,7 @@
    \hypertarget{#1}{}
 }
 \makeatother
+
+% argmin/argmax
+\newcommand{\argmin}{\mathop{\mathrm{argmin}}}
+\newcommand{\argmax}{\mathop{\mathrm{argmax}}}
