[feat] Add multi bib for appendix

--- a/appendices/appendix-full-contents.tex
+++ b/appendices/appendix-full-contents.tex
@@ -1,5 +1,10 @@
+\subsection*{Appendix}
 % input all the contents in this file
 % input{...}
 % input{...}
 % :
 % input{...}
+Random Search~\citeappx{bergstra2012random}.
+
+\bibliographystyleappx{splncs04}
+\bibliographyappx{ref}
