--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -1,23 +1,24 @@
 \usepackage[utf8]{inputenc}
-\usepackage{amsmath,amssymb,bm,bbm}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{bm}
+\usepackage{bbm}
 \usepackage{graphicx}
+\usepackage{tikz}
 \usepackage{ascmac}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage{algorithm, algpseudocode}
 \usepackage{algpseudocode}
-\usepackage{tikz}
 \usepackage{ulem}
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage[caption=false]{subfig}
 \usepackage{comment}
 \usepackage{listings}
-\usetikzlibrary{chains}
-\usetikzlibrary{calc}
-\usepackage{amsmath,tikz}
 \usepackage{lastpage}
 \usepackage{tcolorbox}
+\usepackage{multibib}
 \tcbuselibrary{breakable, skins, theorems}
 \newtheorem{theorem}{Theorem}
 \newtheorem{definition}{Definition}
@@ -32,3 +33,6 @@
 \algtext*{EndFunction}
 \newcommand{\Break}{\textbf{break}}
 \newcommand{\Continue}{\textbf{continue}}
+
+% Add `References` for Appendix
+\newcites{appx}{References}
