--- a/settings/paper-status.tex
+++ b/settings/paper-status.tex
@@ -11,8 +11,8 @@
 \submissionfalse
 
 % Whether to include appendix or not
-% \appendixtrue
-\appendixfalse
+\appendixtrue
+% \appendixfalse
 
 \ifsubmission
 \newcommand{\todo}[1]{}
