--- a/submission.tex
+++ b/submission.tex
@@ -6,7 +6,7 @@
 
 \input{sections/introduction.tex}
 \input{sections/related-works.tex}
-\input{sections/preliminaries.tex}
+\input{sections/background.tex}
 \input{sections/methods.tex}
 \input{sections/experiments.tex}
 \input{sections/conclusions.tex}
