[doc] Add test file and some user commands

--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -1,6 +1,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{mathtools}
 \usepackage{bm}
 \usepackage{bbm}
 \usepackage{graphicx}
