--- a/settings/user-commands.tex
+++ b/settings/user-commands.tex
@@ -11,3 +11,4 @@
 % argmin/argmax
 \newcommand{\argmin}{\mathop{\mathrm{argmin}}}
 \newcommand{\argmax}{\mathop{\mathrm{argmax}}}
+\newcommand{\indic}[1]{\mathbbm{1}[#1]}
