[fix] Fix typo: related works --> related work

--- a/submission.tex
+++ b/submission.tex
@@ -5,7 +5,7 @@
 \input{sections/abstract.tex}
 
 \input{sections/introduction.tex}
-\input{sections/related-works.tex}
+\input{sections/related-work.tex}
 \input{sections/background.tex}
 \input{sections/methods.tex}
 \input{sections/experiments.tex}
