[feat] Add the line comment feature for the algorithm

--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -32,6 +32,7 @@
 \algtext*{EndIf}
 \algtext*{EndProcedure}
 \algtext*{EndFunction}
+\algnewcommand{\LineComment}[1]{\State \(\triangleright\) #1}
 \newcommand{\Break}{\textbf{break}}
 \newcommand{\Continue}{\textbf{continue}}
 
