[doc] Add documentations for each file

--- a/appendices/appendix-full-contents.tex
+++ b/appendices/appendix-full-contents.tex
@@ -6,5 +6,5 @@
 % input{...}
 Random Search~\citeappx{bergstra2012random}.
 
-\bibliographystyleappx{splncs04}
+\bibliographystyleappx{splncs04}  % <==== Change the style file path
 \bibliographyappx{ref}
