--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -1,10 +1,14 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%% DEFINE CONFERENCE SPECIFIC PACKAGES AND STYLE %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\documentclass[dvipdfmx]{article}  % <===== This line must be replaced for conference papers
+
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{bm}
 \usepackage{bbm}
-\usepackage{graphicx}
 \usepackage{tikz}
 \usepackage{ascmac}
 \usepackage{fancyhdr}
@@ -22,6 +26,8 @@
 \usepackage{multibib}
 \tcbuselibrary{breakable, skins, theorems}
 \newtheorem{theorem}{Theorem}
+\newtheorem{proof}{Proof}
+\newtheorem{lemma}{Lemma}
 \newtheorem{definition}{Definition}
 \newtheorem{assumption}{Assumption}
 \def\qed{\hfill $\Box$}
