--- a/settings/preamble.tex
+++ b/settings/preamble.tex
@@ -1,5 +1,4 @@
-\documentclass[dvipdfmx]{article}
 \input{settings/packages.tex}
+\input{settings/layout.tex}  % comment out this line for conference papers
 \input{settings/paper-status.tex}
 \input{settings/user-commands.tex}
-\input{settings/layout.tex}
