--- a/submission.tex
+++ b/submission.tex
@@ -12,7 +12,7 @@
 \input{sections/conclusions.tex}
 \input{sections/acknowledgements.tex}
 
-\bibliographystyle{splncs04}
+\bibliographystyle{splncs04}  % <==== Change the style file path
 \bibliography{ref}
 
 % Automatically include or exclude the appendix information based on paper-status.tex
