--- a/settings/user-commands.tex
+++ b/settings/user-commands.tex
@@ -12,3 +12,4 @@
 \newcommand{\argmin}{\mathop{\mathrm{argmin}}}
 \newcommand{\argmax}{\mathop{\mathrm{argmax}}}
 \newcommand{\indic}[1]{\mathbbm{1}[#1]}
+\newcommand{\comb}[2]{{}_#1 \mathrm{C} _#2}
