[doc] Add tips for arXiv upload

--- a/submission.tex
+++ b/submission.tex
@@ -1,3 +1,7 @@
+% Both \pdfoutput and \documentclass must be defined in submission.tex for arxiv upload
+% \pdfoutput=1 % <=== remove % for arxiv upload
+\documentclass{article}  % <===== This line must be replaced for conference papers
+
 \input{settings/preamble.tex}
 
 \begin{document}
