[doc] Add an example of the author info

--- a/settings/author-info.tex
+++ b/settings/author-info.tex
@@ -14,6 +14,14 @@
 \author{Shuhei Watanabe}
 \date{\today}
 
+\begin{comment}
+  \author{
+    Shuhei Watanabe \textsuperscript{\rm 1} \\
+    \textsuperscript{\rm 1} XXXX \\
+    \texttt{\{XXX, YYY\}@XXX.com}
+  }
+\end{comment}
+
 \fi
 
 \maketitle
