--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -2,6 +2,8 @@
 %%%% DEFINE CONFERENCE SPECIFIC PACKAGES AND STYLE %%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage[hidelinks]{hyperref}  % NOTE: You might want to remove this for some errors
+
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
