[feat] Add the features for more convenient labels

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,2 +1,10 @@
 \section{Introduction}
 Random Search~\cite{bergstra2012random}.
+
+\begin{equation}
+\begin{aligned}
+  f(x) &= x \\
+  g(x) &= x^2
+\end{aligned}
+\label{main:introduction:eq:demo}
+\end{equation}
