--- a/settings/paper-status.tex
+++ b/settings/paper-status.tex
@@ -29,5 +29,8 @@
 % Shuhei comment
 \newcommand{\sw}[1]{\textbf{\textcolor{cyan}{[SW: #1]}}}
 
+% show label names inline
+\usepackage[inline]{showlabels}
+
 \fi
 
