[fix] Format the ref till Section 3

--- a/ref.bib
+++ b/ref.bib
@@ -11,11 +11,11 @@
 
 % a set of statistical tests, overcome the data overlaps in cross validation
 @article{dietterich1998approximate,
-  title     = {Approximate statistical tests for comparing supervised classification learning algorithms},
-  author    = {TG. Dietterich},
-  journal   = {Neural Computation},
-  volume    = {10},
-  year      = {1998},
+  title   = {Approximate statistical tests for comparing supervised classification learning algorithms},
+  author  = {TG. Dietterich},
+  journal = {Neural Computation},
+  volume  = {10},
+  year    = {1998}
 }
 
 ####################################################
@@ -27,45 +27,45 @@
   author    = {JR. Rice},
   booktitle = {Advances in Computers},
   volume    = {15},
-  year      = {1976},
+  year      = {1976}
 }
 
 % performance differences
 @inproceedings{strang2018don,
-  title        = {Don’t rule out simple models prematurely: a large scale benchmark comparing linear and non-linear classifiers in {OpenML}},
-  author       = {Strang, Benjamin and van der Putten, Peter and JN. van Rijn and F. Hutter},
-  booktitle    = {International Symposium on Intelligent Data Analysis},
-  year         = {2018},
+  title     = {Don’t rule out simple models prematurely: a large scale benchmark comparing linear and non-linear classifiers in {OpenML}},
+  author    = {B. Strang and P. van der Putten and JN. van Rijn and F. Hutter},
+  booktitle = {International Symposium on Intelligent Data Analysis},
+  year      = {2018}
 }
 
 % parallel portfolio
 @inproceedings{lindauer2015sequential,
-  title        = {From sequential algorithm selection to parallel portfolio selection},
-  author       = {M. Lindauer and H. Hoos and F. Hutter},
-  booktitle    = {International Conference on Learning and Intelligent Optimization},
-  year         = {2015},
+  title     = {From sequential algorithm selection to parallel portfolio selection},
+  author    = {M. Lindauer and H. Hoos and F. Hutter},
+  booktitle = {International Conference on Learning and Intelligent Optimization},
+  year      = {2015}
 }
 
 % instance weighting by a cost-sensitive metric
 @article{ting2002instance,
-  title     = {An instance-weighting method to induce cost-sensitive trees},
-  author    = {KM. Ting},
-  journal   = {Transactions on Knowledge and Data Engineering},
-  volume    = {14},
-  year      = {2002}
+  title   = {An instance-weighting method to induce cost-sensitive trees},
+  author  = {KM. Ting},
+  journal = {Transactions on Knowledge and Data Engineering},
+  volume  = {14},
+  year    = {2002}
 }
 
 % instance weighting: application
 @inproceedings{xu2011hydra,
   title     = {{Hydra-MIP}: Automated algorithm configuration and selection for mixed integer programming},
-  author    = {Xu, Lin and F. Hutter and H. Hoos H and Leyton-Brown, Kevin},
+  author    = {L. Xu and F. Hutter and H. Hoos H and K. Leyton-Brown},
   booktitle = {RCRA workshop at International Joint Conference on Artificial Intelligence},
   year      = {2011}
 }
 
 @inproceedings{kleinberg2017efficiency,
   title     = {Efficiency Through Procrastination: Approximately Optimal Algorithm Configuration with Runtime Guarantees},
-  author    = {Kleinberg, Robert and Leyton-Brown, Kevin and Lucier, Brendan},
+  author    = {R. Kleinberg and K. Leyton-Brown and B. Lucier},
   booktitle = {International Joint Conference on Artificial Intelligence},
   year      = {2017}
 }
@@ -75,42 +75,35 @@
   author  = {K. Eggensperger and M. Lindauer and F. Hutter},
   journal = {Journal of Artificial Intelligence Research},
   volume  = {64},
-  pages   = {861--893},
   year    = {2019}
 }
 
 @article{hutter2009paramils,
   title   = {{ParamILS}: an automatic algorithm configuration framework},
-  author  = {F. Hutter and H. Hoos H and Leyton-Brown, Kevin and St{\"u}tzle, Thomas},
+  author  = {F. Hutter and H. Hoos H and K. Leyton-Brown and T. St{\"u}tzle},
   journal = {Journal of Artificial Intelligence Research},
   volume  = {36},
-  pages   = {267--306},
   year    = {2009}
 }
 
 @incollection{kadioglu2010isac,
   title     = {{ISAC}--instance-specific algorithm configuration},
-  author    = {Kadioglu, Serdar and Malitsky, Yuri and Sellmann, Meinolf and Tierney, Kevin},
-  booktitle = {ECAI 2010},
-  pages     = {751--756},
-  year      = {2010},
-  publisher = {IOS Press}
+  author    = {S. Kadioglu and Y. Malitsky and M. Sellmann and K. Tierney},
+  booktitle = {European Conference on Artificial Intelligence},
+  year      = {2010}
 }
 
 @inproceedings{liu2019automatic,
   title     = {Automatic construction of parallel portfolios via explicit instance grouping},
-  author    = {Liu, Shengcai and Tang, Ke and Yao, Xin},
-  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume    = {33},
-  number    = {01},
-  pages     = {1560--1567},
+  author    = {S. Liu and K. Tang and X. Yao},
+  booktitle = {AAAI Conference on Artificial Intelligence},
   year      = {2019}
 }
 
 @inproceedings{seipp2015automatic,
   title     = {Automatic configuration of sequential planning portfolios},
-  author    = {Seipp, Jendrik and Sievers, Silvan and Helmert, Malte and F. Hutter},
-  booktitle = {Twenty-Ninth AAAI Conference on Artificial Intelligence},
+  author    = {J. Seipp and S. Sievers and M. Helmert and F. Hutter},
+  booktitle = {AAAI Conference on Artificial Intelligence},
   year      = {2015}
 }
 
@@ -138,7 +131,7 @@
 % random search vs grid search
 @article{bergstra2012random,
   title   = {Random search for hyper-parameter optimization},
-  author  = {Bergstra, James and Bengio, Yoshua},
+  author  = {J. Bergstra and Y. Bengio},
   journal = {Journal of machine learning research},
   volume  = {13},
   number  = {2},
@@ -179,8 +172,8 @@
 % SMAC (hamming kernel)
 @inproceedings{hutter2011sequential,
   title        = {Sequential model-based optimization for general algorithm configuration},
-  author       = {F. Hutter and H. Hoos H and Leyton-Brown, Kevin},
-  booktitle    = {International conference on learning and intelligent optimization},
+  author       = {F. Hutter and H. Hoos H and K. Leyton-Brown},
+  booktitle    = {International Conference on Learning and Intelligent Optimization},
   pages        = {507--523},
   year         = {2011},
   organization = {Springer}
@@ -189,7 +182,7 @@
 % TPE
 @article{bergstra2011algorithms,
   title   = {Algorithms for hyper-parameter optimization},
-  author  = {Bergstra, James and Bardenet, R{\'e}mi and Bengio, Yoshua and K{\'e}gl, Bal{\'a}zs},
+  author  = {J. Bergstra and Bardenet, R{\'e}mi and Y. Bengio and K{\'e}gl, Bal{\'a}zs},
   journal = {Advances in neural information processing systems},
   volume  = {24},
   year    = {2011}
@@ -198,7 +191,7 @@
 % TPE 2
 @inproceedings{bergstra2013making,
   title        = {Making a science of model search: Hyperparameter optimization in hundreds of dimensions for vision architectures},
-  author       = {Bergstra, James and Yamins, Daniel and Cox, David},
+  author       = {J. Bergstra and Yamins, Daniel and Cox, David},
   booktitle    = {International conference on machine learning},
   pages        = {115--123},
   year         = {2013},
@@ -310,7 +303,7 @@
 @article{tresp2000bayesian,
   title     = {A {Bayesian} committee machine},
   author    = {Tresp, Volker},
-  journal   = {Neural computation},
+  journal   = {Neural Computation},
   volume    = {12},
   number    = {11},
   pages     = {2719--2741},
@@ -880,7 +873,7 @@
 @inproceedings{domhan2015speeding,
   title     = {Speeding up automatic hyperparameter optimization of deep neural networks by extrapolation of learning curves},
   author    = {Domhan, Tobias and JT. Springenberg and F. Hutter},
-  booktitle = {Twenty-fourth international joint conference on artificial intelligence},
+  booktitle = {International Joint Conference on Artificial Intelligence},
   year      = {2015}
 }
 
@@ -914,7 +907,7 @@
 @inproceedings{feurer2015initializing,
   title     = {Initializing {Bayesian} hyperparameter optimization via meta-learning},
   author    = {M. Feurer and Springenberg, Jost and F. Hutter},
-  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  booktitle = {AAAI Conference on Artificial Intelligence},
   volume    = {29},
   number    = {1},
   year      = {2015}
@@ -923,7 +916,7 @@
 % Auto-weka
 @inproceedings{thornton2013auto,
   title     = {{Auto-WEKA}: Combined selection and hyperparameter optimization of classification algorithms},
-  author    = {Thornton, Chris and F. Hutter and H. Hoos H and Leyton-Brown, Kevin},
+  author    = {Thornton, Chris and F. Hutter and H. Hoos H and K. Leyton-Brown},
   booktitle = {Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
   pages     = {847--855},
   year      = {2013}
@@ -1153,7 +1146,7 @@
 @inproceedings{real2019regularized,
   title     = {Regularized evolution for image classifier architecture search},
   author    = {Real, Esteban and Aggarwal, Alok and Huang, Yanping and Le, Quoc V},
-  booktitle = {Proceedings of the aaai conference on artificial intelligence},
+  booktitle = {AAAI Conference on Artificial Intelligence},
   volume    = {33},
   number    = {01},
   pages     = {4780--4789},
@@ -1306,17 +1299,15 @@
 % DAC as MDP, DAC accross datasets
 @incollection{biedenkapp2020dynamic,
   title     = {Dynamic algorithm configuration: foundation of a new meta-algorithmic framework},
-  author    = {A. Biedenkapp and Bozkurt, H Furkan and Eimer, Theresa and F. Hutter and M. Lindauer},
-  booktitle = {ECAI 2020},
-  pages     = {427--434},
-  year      = {2020},
-  publisher = {IOS Press}
+  author    = {A. Biedenkapp and HF. Bozkurt and T. Eimer and F. Hutter and M. Lindauer},
+  booktitle = {European Conference on Artificial Intelligence},
+  year      = {2020}
 }
 
 % curriculum learning
 @inproceedings{bengio2009curriculum,
   title     = {Curriculum learning},
-  author    = {Bengio, Yoshua and Louradour, J{\'e}r{\^o}me and Collobert, Ronan and Weston, Jason},
+  author    = {Y. Bengio and Louradour, J{\'e}r{\^o}me and Collobert, Ronan and Weston, Jason},
   booktitle = {Proceedings of the 26th annual international conference on machine learning},
   pages     = {41--48},
   year      = {2009}
@@ -1336,7 +1327,7 @@
 @inproceedings{daniel2016learning,
   title     = {Learning step size controllers for robust neural network training},
   author    = {Daniel, Christian and Taylor, Jonathan and Nowozin, Sebastian},
-  booktitle = {Thirtieth AAAI Conference on Artificial Intelligence},
+  booktitle = {AAAI Conference on Artificial Intelligence},
   year      = {2016}
 }
 
@@ -1428,7 +1419,7 @@
 % forward selection of hyperparameters for hyperparameter importance
 @inproceedings{hutter2013identifying,
   title        = {Identifying key algorithm parameters and instance features using forward selection},
-  author       = {F. Hutter and H. Hoos H and Leyton-Brown, Kevin},
+  author       = {F. Hutter and H. Hoos H and K. Leyton-Brown},
   booktitle    = {International Conference on Learning and Intelligent Optimization},
   pages        = {364--381},
   year         = {2013},
@@ -1439,7 +1430,7 @@
 @inproceedings{biedenkapp2017efficient,
   title     = {Efficient parameter importance analysis via ablation with surrogates},
   author    = {A. Biedenkapp and M. Lindauer and K. Eggensperger and F. Hutter and C. Fawcett and H. Hoos},
-  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  booktitle = {AAAI Conference on Artificial Intelligence},
   volume    = {31},
   number    = {1},
   year      = {2017}
@@ -1460,7 +1451,7 @@
 % global hyperparameter importance
 @inproceedings{hutter2014efficient,
   title        = {An efficient approach for assessing hyperparameter importance},
-  author       = {F. Hutter and H. Hoos and Leyton-Brown, Kevin},
+  author       = {F. Hutter and H. Hoos and K. Leyton-Brown},
   booktitle    = {International conference on machine learning},
   pages        = {754--762},
   year         = {2014},
