[fix] Format the ref till Section 11

--- a/ref.bib
+++ b/ref.bib
@@ -59,7 +59,7 @@
 @inproceedings{xu2011hydra,
   title     = {{Hydra-MIP}: Automated algorithm configuration and selection for mixed integer programming},
   author    = {L. Xu and F. Hutter and H. Hoos H and K. Leyton-Brown},
-  booktitle = {RCRA workshop at International Joint Conference on Artificial Intelligence},
+  booktitle = {RCRA Workshop at International Joint Conference on Artificial Intelligence},
   year      = {2011}
 }
 
@@ -114,7 +114,7 @@
 @incollection{feurer2019hyperparameter,
   title     = {Hyperparameter optimization},
   author    = {M. Feurer and F. Hutter},
-  booktitle = {Automated machine learning},
+  booktitle = {Automated Machine Learning},
   pages     = {3--33},
   year      = {2019},
   publisher = {Springer}
@@ -608,18 +608,18 @@
 % extensive survey about meta-learning
 @incollection{vanschoren2019meta,
   title     = {Meta-learning},
-  author    = {Vanschoren, Joaquin},
+  author    = {J. Vanschoren},
   booktitle = {Automated Machine Learning},
   pages     = {35--61},
   year      = {2019},
-  publisher = {Springer, Cham}
+  publisher = {Springer}
 }
 
 % ensemble, warm-starting
 @article{feurer2018scalable,
   title   = {Scalable meta-learning for {Bayesian} optimization},
-  author  = {M. Feurer and B. Letham and Bakshy, Eytan},
-  journal = {stat},
+  author  = {M. Feurer and B. Letham and E. Bakshy},
+  journal = {AutoML Workshop at International Conference on Machine Learning},
   volume  = {1050},
   pages   = {6},
   year    = {2018}
@@ -813,12 +813,12 @@
 
 % auto-sklearn
 @incollection{feurer2019auto,
-  title     = {Auto-sklearn: efficient and robust automated machine learning},
+  title     = {Auto-sklearn: efficient and robust Automated Machine Learning},
   author    = {M. Feurer and A. Klein and K. Eggensperger and JT. Springenberg and M. Blum and F. Hutter},
   booktitle = {Automated Machine Learning},
   pages     = {113--134},
   year      = {2019},
-  publisher = {Springer, Cham}
+  publisher = {Springer}
 }
 
 % auto-sklearn 2.0
@@ -966,7 +966,7 @@
 @inproceedings{mendoza2016towards,
   title     = {Towards automatically-tuned neural networks},
   author    = {Mendoza, Hector and A. Klein and M. Feurer and JT. Springenberg and F. Hutter},
-  booktitle = {Workshop on Automatic Machine Learning},
+  booktitle = {AutoML Workshop at International Conference on Machine Learning},
   year      = {2016}
 }
 
@@ -1094,7 +1094,7 @@
 @inproceedings{elsken2017simple,
   title     = {Simple and efficient architecture search for {CNNs}},
   author    = {T. Elsken and JH. Metzen and F. Hutter},
-  booktitle = {Workshop on Meta-Learning at Advances in Neural Information Processing Systems},
+  booktitle = {Meta-Learning Workshop at Advances in Neural Information Processing Systems},
   year      = {2017}
 }
 
@@ -1109,27 +1109,23 @@
 % one-shot, parameter sharing, ENAS
 @inproceedings{pham2018efficient,
   title        = {Efficient neural architecture search via parameters sharing},
-  author       = {Pham, Hieu and Guan, Melody and Zoph, Barret and Le, Quoc and Dean, Jeff},
+  author       = {H. Pham and M. Guan and B. Zoph and Q. Le and J. Dean},
   booktitle    = {International Conference on Machine Learning},
-  pages        = {4095--4104},
   year         = {2018},
-  organization = {PMLR}
 }
 
 % one-shot, parameter sharing, droppath
 @inproceedings{bender2018understanding,
   title        = {Understanding and simplifying one-shot architecture search},
-  author       = {Bender, Gabriel and Kindermans, Pieter-Jan and Zoph, Barret and Vasudevan, Vijay and Le, Quoc},
+  author       = {G. Bender and PJ. Kindermans and B. Zoph and V. Vasudevan and Q. Le},
   booktitle    = {International Conference on Machine Learning},
-  pages        = {550--559},
   year         = {2018},
-  organization = {PMLR}
 }
 
 % DARTS
 @article{liu2018darts,
   title   = {{DARTS}: Differentiable architecture search},
-  author  = {Liu, Hanxiao and Simonyan, Karen and Yang, Yiming},
+  author  = {H. Liu and K. Simonyan and Y. Yang},
   journal = {arXiv:1806.09055},
   year    = {2018}
 }
@@ -1137,7 +1133,7 @@
 % robust NAS
 @article{zela2019understanding,
   title   = {Understanding and robustifying differentiable architecture search},
-  author  = {A. Zela and T. Elsken and Saikia, Tonmoy and Marrakchi, Yassine and Brox, Thomas and F. Hutter},
+  author  = {A. Zela and T. Elsken and T. Saikia and Y. Marrakchi and T. Brox and F. Hutter},
   journal = {arXiv:1909.09656},
   year    = {2019}
 }
@@ -1145,26 +1141,23 @@
 % DARTS with adversarial training
 @inproceedings{chen2020stabilizing,
   title        = {Stabilizing differentiable architecture search via perturbation-based regularization},
-  author       = {Chen, Xiangning and Hsieh, Cho-Jui},
+  author       = {X. Chen and CJ. Hsieh},
   booktitle    = {International Conference on Machine Learning},
-  pages        = {1554--1565},
   year         = {2020},
-  organization = {PMLR}
 }
 
 % GDAS
 @inproceedings{dong2019searching,
   title     = {Searching for a robust neural architecture in four {GPU} hours},
-  author    = {Dong, Xuanyi and Yang, Yi},
-  booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
-  pages     = {1761--1770},
+  author    = {X. Dong and Y. Yang},
+  booktitle = {Conference on Computer Vision and Pattern Recognition},
   year      = {2019}
 }
 
 % proxy NAS
 @article{cai2018proxylessnas,
   title   = {{ProxylessNAS}: Direct neural architecture search on target task and hardware},
-  author  = {Cai, Han and Zhu, Ligeng and Han, Song},
+  author  = {H. Cai and L. Zhu and S. Han},
   journal = {arXiv:1812.00332},
   year    = {2018}
 }
@@ -1172,24 +1165,22 @@
 % PC DARTS
 @article{xu2019pc,
   title   = {{PC-DARTS}: Partial channel connections for memory-efficient architecture search},
-  author  = {Xu, Yuhui and Xie, Lingxi and Zhang, Xiaopeng and Chen, Xin and Qi, Guo-Jun and Tian, Qi and Xiong, Hongkai},
+  author  = {Y. Xu and L. Xie and X. Zhang and X. Chen and GJ. Qi and Q. Tian and H. Xiong},
   journal = {arXiv:1907.05737},
   year    = {2019}
 }
 
 @article{saxena2016convolutional,
   title   = {Convolutional neural fabrics},
-  author  = {Saxena, Shreyas and Verbeek, Jakob},
+  author  = {S. Saxena and J. Verbeek},
   journal = {Advances in Neural Information Processing Systems},
-  volume  = {29},
-  pages   = {4053--4061},
   year    = {2016}
 }
 
 % AutoRL, joint optimization of HPO and NAS
 @article{runge2018learning,
   title   = {Learning to design {RNA}},
-  author  = {Runge, Frederic and Stoll, Danny and S. Falkner and F. Hutter},
+  author  = {F. Runge and D. Stoll and S. Falkner and F. Hutter},
   journal = {arXiv:1812.11951},
   year    = {2018}
 }
@@ -1197,20 +1188,17 @@
 % AutoDispNet: joint optimization of HPO and NAS
 @inproceedings{saikia2019autodispnet,
   title     = {{AutoDispNet}: Improving disparity estimation with automl},
-  author    = {Saikia, Tonmoy and Marrakchi, Yassine and A. Zela and F. Hutter and Brox, Thomas},
-  booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision},
-  pages     = {1812--1823},
+  author    = {T. Saikia and Y. Marrakchi and A. Zela and F. Hutter and T. Brox},
+  booktitle = {International Conference on Computer Vision},
   year      = {2019}
 }
 
 % random search with weight sharing
 @inproceedings{li2020random,
   title        = {Random search and reproducibility for neural architecture search},
-  author       = {Li, Liam and Talwalkar, Ameet},
-  booktitle    = {Uncertainty in artificial intelligence},
-  pages        = {367--377},
+  author       = {L. Li and A. Talwalkar},
+  booktitle    = {Uncertainty in Artificial Intelligence},
   year         = {2020},
-  organization = {PMLR}
 }
 
 ####################################################
@@ -1227,26 +1215,23 @@
 % curriculum learning
 @inproceedings{bengio2009curriculum,
   title     = {Curriculum learning},
-  author    = {Y. Bengio and Louradour, J{\'e}r{\^o}me and Collobert, Ronan and Weston, Jason},
+  author    = {Y. Bengio and J. Louradour and R. Collobert and J. Weston},
   booktitle = {International Conference on Machine Learning},
-  pages     = {41--48},
   year      = {2009}
 }
 
 % self-paced learning
 @article{kumar2010self,
   title   = {Self-paced learning for latent variable models},
-  author  = {Kumar, M and Packer, Benjamin and Koller, Daphne},
+  author  = {M. Kumar and B. Packer and D. Koller},
   journal = {Advances in Neural Information Processing Systems},
-  volume  = {23},
-  pages   = {1189--1197},
   year    = {2010}
 }
 
 % reinforcement learning for step size scheduling
 @inproceedings{daniel2016learning,
   title     = {Learning step size controllers for robust neural network training},
-  author    = {Daniel, Christian and Taylor, Jonathan and Nowozin, Sebastian},
+  author    = {C. Daniel and J. Taylor and S. Nowozin},
   booktitle = {AAAI Conference on Artificial Intelligence},
   year      = {2016}
 }
@@ -1254,7 +1239,7 @@
 % population-based training
 @article{jaderberg2017population,
   title   = {Population based training of neural networks},
-  author  = {Jaderberg, Max and Dalibard, Valentin and Osindero, Simon and Czarnecki, Wojciech M and Donahue, Jeff and Razavi, Ali and Vinyals, Oriol and Green, Tim and Dunning, Iain and Simonyan, Karen and others},
+  author  = {M. Jaderberg and V. Dalibard and S. Osindero and WM. Czarnecki and J. Donahue and A. Razavi and O. Vinyals and T. Green and I. Dunning and K. Simonyan and others},
   journal = {arXiv:1711.09846},
   year    = {2017}
 }
@@ -1262,16 +1247,15 @@
 % population-based training
 @inproceedings{liang2021regularized,
   title     = {Regularized evolutionary population-based training},
-  author    = {Liang, Jason and Gonzalez, Santiago and Shahrzad, Hormoz and Miikkulainen, Risto},
-  booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference},
-  pages     = {323--331},
+  author    = {J. Liang and S. Gonzalez and H. Shahrzad and R. Miikkulainen},
+  booktitle = {Genetic and Evolutionary Computation Conference},
   year      = {2021}
 }
 
 % population-based training: parallel settings
 @article{parker2020provably,
   title   = {Provably efficient online hyperparameter optimization with population-based bandits},
-  author  = {Parker-Holder, Jack and Nguyen, Vu and Roberts, Stephen},
+  author  = {J. Parker-Holder and V. Nguyen and S. Roberts},
   journal = {arXiv:2002.02518},
   year    = {2020}
 }
@@ -1282,11 +1266,9 @@
 % DAC for BB optimizer
 @inproceedings{shala2020learning,
   title        = {Learning step-size adaptation in {CMA-ES}},
-  author       = {Shala, Gresa and A. Biedenkapp and Awad, Noor and Adriaensen, Steven and M. Lindauer and F. Hutter},
+  author       = {G. Shala and A. Biedenkapp and N. Awad and S. Adriaensen and M. Lindauer and F. Hutter},
   booktitle    = {International Conference on Parallel Problem Solving from Nature},
-  pages        = {691--706},
   year         = {2020},
-  organization = {Springer}
 }
 
 % L2L by gradient descent (L2L for LSTM)
